Add HamburgerMenu only once per instance

A new HamburgerMenu is added to the context menu each time it is opened
which causes a delay after enough invocations.  Skip adding another if
one has already been added.

BUG: 495029